yaml/sample_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc3
  labels:
    type: web
spec:
  selector:
    type: web
  ports:
  - port: 80
    targetPort: 4000
