yaml/svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc-app
spec:
  selector:
    type: app1
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer  
 # type: NodePort
