yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc-user
spec:
  selector:
    type: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer  
 # type: NodePort
