yaml/svc0.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc-root
spec:
  selector:
    type: web0
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer  
 # type: NodePort
