yaml/svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc-product
spec:
  selector:
    type: web2
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer  
 # type: NodePort
