yaml/svc_test2.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc12
spec:
  selector:
    type: web102
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
