yaml/ingress111.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress111

spec:
  rules:
  - host: dell.demo.vmware.com
    http:
      paths:
#      - path: /user/
#        backend:
#          serviceName: test-svc
#          servicePort: 80
      - path: /product/
        backend:
          serviceName: test-svc111
          servicePort: 80
